[package]
name = "deno_path_util"
description = "Path utilities used in Deno"
version = "0.2.2"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_path_util"

[features]

[dependencies]
percent-encoding = "2.3.0"
thiserror = "2"
sys_traits.workspace = true
deno_error = "0.5.2"
url = "2.5.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
sys_traits = { workspace = true, features = ["memory"] }

[workspace]
members = ["."]

[workspace.dependencies]
sys_traits = "0.1.0"

